[package]
name = "mctk"
version = "0.1.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
description = "Mecha Toolkit for Linux Wayland Clients"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[dependencies]
mctk_core.workspace = true

[workspace]
members = ["core", "examples/*"]

[workspace.dependencies]
mctk = { version = "0.1", path = "." }
mctk_core = { version = "0.1", path = "core" }
