[package]
name = "mctk_core"
description = "Core of Mecha toolkit for Linux Wayland Clients"
version = "0.1.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[features]
default = []
instrumented = ["superluminal-perf"]

[dependencies]
mctk_macros = { path="../macros" }
rgb = "0.8.20"
imgref = "1.6.1"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
raw-window-handle = "0.5.2"
futures = "0.3.28"
wayland-backend = { version = "0.3.2", features = ["client_system"]}
femtovg = { version = "0.8.2", features = ["image", "image-loading"] }
crossbeam-channel = "0.5.11"
cosmic-text = { git="https://github.com/pop-os/cosmic-text", rev="19b4d8336e34073bb51b83578d3d803c8c953787" }
swash = "0.1.12"
image = { version = "*", default-features = false, features = ["png", "jpeg"] }
glutin = "0.30.10"
euclid = "0.22.3"
resource = "0.5.0"
derive_more = "0.99"
serde = { version = "1.0.163", features = ["derive"] }
ahash = "0.3.2"
derive_builder = "0.20.0"
usvg = { version = "0.33.0" }
lazy_static = "1.4.0"
sys-locale = "0.3.1"
glyph_brush_layout = "0.2"

# features
superluminal-perf = { version = "0.1", optional = true }
