[package]
name = "mctk_macros"
version = "0.1.0"
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mctk"
homepage = "https://mecha.so"

[lib]
proc-macro = true

[dependencies]
global_counter = "0.2"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
