[package]
name = "mctk_smithay"
version = "0.1.0"
authors = ["Shoaib Merchant <shoaibm@mechasystems.com>"]
description = "smithay windowing backend support for mctk"
edition = "2021"
repository = "https://github.com/mecha-org/mctk"
documentation = "https://docs.rs/mctk"
license = "MIT"

[features]
instrumented = ["mctk_core/instrumented"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"]}
mctk_core = { path = "../../core" }
raw-window-handle = "0.5.2"
winit = { version = "0.28" }
wayland-client = "0.31.1"
smithay-client-toolkit = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
ahash = "0.8.11"

[dev-dependencies]
mctk_macros = { path = "../../macros" }
