[package]
name = "carousel"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mctk_core = { path = "../../core", version = "0.1.0" }
mctk_smithay = { path = "../../backends/smithay", version = "0.1.0" }
mctk_macros = { path = "../../macros", version = "0.1.0" }
smithay-client-toolkit = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
anyhow = { version = "1.0.75", features = ["backtrace"]}
tokio = { version = "1.33", features = ["full"] }
