[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mctk.workspace = true
mctk_core = { path = "../../core" }
smithay-client-toolkit = "0.18.0"
femtovg = "0.8.2"
glutin = "0.30.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
anyhow = { version = "1.0.75", features = ["backtrace"]}